# snesrecomp

./: .gitignore  .gitmodules  CLAUDE.md  DEBUG.md  DEVELOPMENT.md  FRAME_MODEL_TIMING.md  IMPROVEMENTS.md  ISSUES.md  README.md  REVERSE_DEBUGGER.md  SNES_ACCURACY_BURNDOWN.md  SNES_COSIM.md  THIRD_PARTY_ATTRIBUTION.md  snes-recomp-net-games.code-workspace  snesrecomp_cli.py
.github/workflows/: cli-release.yml  native-analyzer.yml
_triage/: check_fuzz_status.py  demo_lint_catches_regression.py  one_shot_diff.py  probe_gamemode.py  probe_layer3_ranges.py  probe_layer3_vram_writers.py  probe_loadstripe_block_diff.py  probe_loadstripe_insn_diff.py  probe_ring_status.py  probe_vram_write_diff.py  smoke_xba_emit.py  test_post_mortem_dump.py  v2_debug_imm.py  v2_demo_emit.py  verify_post_mortem.py  vram_addr_histogram.py
cosim/: .gitignore  CMakeLists.txt  align_diff.py  apu_region_diff.py  dspout_compare.py  gates.sh  harness_glue.c  harness_smw.c  ref_driver.c  trace_recomp.py  track_addrs.py
docs/: ABSTRACT_INTERPRETATION_GAPS.md  ANALYZER_GAPS_INVENTORY.md  DKC2_BRANCH_MERGE_ACCEPTANCE.md  HOST_OVERLAY_EXTRACTION.md  LAUNCHER_DESIGN.md  LLE_FIRST_ANALYSIS.md  LLE_SCHEDULER.md  MULTI_TIER.md  RECOMP_NET.md  SHADOW_ENHANCEMENTS.md
fuzz/: .gitignore  _harness_c.py  _msvc.py  build_opcode_table.py  categorize_flag_mismatches.py  diff.py  generate_snippets.py  opcode_table.json  run_oracle.py  run_recomp.py  v2_stale_shadow.py  v2_stale_shadow_demo_catches_bug.py
lib/: CMakeLists.txt
recompiler/: add_bank01_guards.py  add_bank02_guards.py  add_bank04_guards.py  add_bank05_guards.py  cfg.py  discover.py  gen_bank01_cfg.py  parse_smwdisx_symbols.py  promote_bank01.py  recomp.py  snes65816.py  snes_cycles.py  ssa_placement.py
recompiler-rs/: .gitignore  Cargo.toml  README.md
recompiler-rs/src/: cfg.rs  decoder.rs  insn.rs  lib.rs  rom.rs
recompiler/v2/: __init__.py  atomic_output.py  cfg.py  cfg_loader.py  codegen.py  decoder.py  emit_bank.py  emit_function.py  emitter_helpers.py  exit_mx_autoroute.py  ir.py  lowering.py  pha_rts_autoroute.py  program_analysis.py  program_emit.py  tail_call_autoroute.py  translation_units.py  widths.py
runner/: apply_snes9x_patch.py  launcher.cmake  recomp_net.cmake  recomp_ui.cmake  runner.cmake  snes9x_oracle.patch
runner/src/: audio_trace.c  audio_trace.h  common_cpu_infra.c  common_cpu_infra.h  common_rtl.c  common_rtl.h  cosim.c  cosim.h  cosim_state.c  cosim_state.h  cpu_state.c  cpu_state.h  cpu_trace.c  cpu_trace.h  crc32.c  crc32.h  debug_server.c  debug_server.h  emu_oracle_cmds.c  execution_mode.c  execution_mode.h  framedump.c  framedump.h  host_report.c  host_report.h  keybinds.c  keybinds.h  launcher.c  launcher.h  ppu_dma_trace.c  ppu_dma_trace.h  recomp_hw.c  recomp_hw.h  recomp_state.c  recomp_state.h  sha256.c  sha256.h  snes9x_bridge.cpp  snes9x_bridge.h  snes_oracle_backend.h  (+6 more)
runner/src/launcher_ng/: .gitignore  CMakeLists.txt  launcher_backend.h  launcher_binds.c  launcher_binds.h  launcher_debug.c  launcher_debug.h  launcher_files.c  launcher_files.h  launcher_gl.c  launcher_gl.h  launcher_input.c  launcher_input.h  launcher_model.c  launcher_model.h  launcher_ng.cmake  launcher_ng_capi.c  launcher_panels.h  launcher_platform.h  launcher_platform_sdl2.c  launcher_platform_sdl3.c  launcher_sdlcompat.h  launcher_theme.h  proto_main.c
runner/src/launcher_ng/backends/clay/: clay_impl.c  clay_renderer_gl.c  clay_renderer_gl.h  launcher_clay.cpp
runner/src/launcher_ng/backends/imgui/: launcher_imgui.cpp
tests/: run_tests.py  test_accumulator_shift_width.py  test_attract_demo_regression.py  test_bit_v_flag_width.py  test_block_hook_emits_regs.py  test_cfg_construction.py  test_decompress.py  test_diagonal_ledge_jmp_phi.py  test_dispatch_extents.py  test_dp_alias_after_register_mutation.py  test_dp_indirect_uses_db.py  test_emit_order_fallthrough.py  test_emitter_mask_shape.py  test_fallthrough_gap.py  test_flag_tracking.py  test_framework_fixes.py  test_function_boundaries.py  test_insn_hook_emits.py  test_livein_inference.py  test_memory_shift_rotate_width.py  test_mflag_width.py  test_mx_inference_from_callers.py  test_natural_end_fallthrough.py  test_phi_merge_jmp_back_edge.py  test_phi_merge_x_param.py  test_program_profile_roots.py  test_promote_rety_loop_thread.py  test_regen_idempotent.py  test_reverse_debug_hook_coverage.py  test_rmw_hw_register_dispatch.py  test_sep_index_narrowing.py  test_side_effecting_lda_branch.py  test_sig_augment.py  test_sig_completeness.py  test_smwdisx_compare.py  test_snes_cycles.py  test_ssa_placement.py  test_sta_indir_wide.py  test_sync_funcs_h.py  test_tail_call_x_restore.py  (+3 more)
tests/cpu_diff/: cpu_diff.c  cpu_diff.h  gen_ops.py  run.ps1
tests/interp816/: README.md  bridge_test.c  interp816_test.c  run.ps1  run.sh
tests/l3/: _attract_vram_diff.py  _probe_055_a9_writers.py  _probe_1928_timeline.py  _probe_1c26_wram.py  _probe_1c3e_writers.py  _probe_1c3e_writes.py  _probe_28d8_source.py  _probe_9a_writers.py  _probe_boot_gm_transitions.py  _probe_buffer_fill_timing.py  _probe_bug8_72_writer_compare.py  _probe_bug8_a_at_ef60.py  _probe_bug8_all_gamemode_handlers.py  _probe_bug8_attract_sweep.py  _probe_bug8_branch_vars.py  _probe_bug8_break_ee3a.py  _probe_bug8_cce0_branches.py  (+175 more)
tools/: __init__.py  align_scan.py  build_cli.py  build_native_analyzer.py  cfg_apply_audit_fixes.py  cfg_audit.py  cfg_exclude_range_audit.py  cfg_marker_audit.py  cfg_override_maximize.py  cfg_override_mode_crosscheck.py  cfg_override_sig_crosscheck.py  cfg_override_smwdisx_crosscheck.py  cfg_override_strip.py  cfg_override_triage.py  cfg_override_validator.py  cfg_strip_redundant.py  cosim_align.py  cosim_fbdump.py  fp_compare.py  ingest_dkc2_disasm.py  ingest_sm_decomp.py  ingest_zelda3_decomp.py  lint_codegen_widths.py  ppu_frame_diff.py  smoke_cli_package.py  smwdisx_apply_excludes.py  smwdisx_boundary_check.py  smwdisx_exclude_pass.py  snes.py  snes_cosim.py  tier2_ingest.py  v2_analyze.py  v2_compare_analysis.py  v2_compare_output.py  v2_emit.py  v2_regen.py  v2_sync_funcs_h.py  wram_diff.py
(+138 files in other folders)
